--- a/core/src/main/resources/org/apache/calcite/runtime/CalciteResource.properties
+++ b/core/src/main/resources/org/apache/calcite/runtime/CalciteResource.properties
@@ -234,6 +234,7 @@ FunctionMatchRecognizeOnly=Function ''{0}'' can only be used in MATCH_RECOGNIZE
 PatternFunctionNullCheck=Null parameters in ''{0}''
 UnknownPattern=Unknown pattern ''{0}''
 IntervalMustBeNonNegative=Interval must be non-negative ''{0}''
+IntervalMustBeNumeric=Interval must be of type TINYINT, SMALLINT, INTEGER or BIGINT
 CannotUseWithinWithoutOrderBy=Must contain an ORDER BY clause when WITHIN is used
 FirstColumnOfOrderByMustBeTimestamp=First column of ORDER BY must be of type TIMESTAMP
 ExtendNotAllowed=Extended columns not allowed under the current SQL conformance level
