[BLINK-15039252][cep] Support emit partial results before timeout occurs
Summary: ref T15039252

Test Plan: N/A

Reviewers: 云邪

Reviewed By: 云邪

Subscribers: P577102

Differential Revision: https://aone.alibaba-inc.com/code/D589939

--- a/core/src/main/resources/org/apache/calcite/runtime/CalciteResource.properties
+++ b/core/src/main/resources/org/apache/calcite/runtime/CalciteResource.properties
@@ -237,6 +237,7 @@ IntervalMustBeNonNegative=Interval must be non-negative ''{0}''
 IntervalMustBeNumeric=Interval must be of type TINYINT, SMALLINT, INTEGER or BIGINT
 CannotUseWithinWithoutOrderBy=Must contain an ORDER BY clause when WITHIN is used
 FirstColumnOfOrderByMustBeTimestamp=First column of ORDER BY must be of type TIMESTAMP
+EmitTimeoutMustBeUsedWithTimeoutRows=EMIT TIMEOUT must be used with ONE ROW PER MATCH WITH TIMEOUT ROWS or ALL ROWS PER MATCH WITH TIMEOUT ROWS
 ExtendNotAllowed=Extended columns not allowed under the current SQL conformance level
 RolledUpNotAllowed=Rolled up column ''{0}'' is not allowed in {1}
 SchemaExists=Schema ''{0}'' already exists
