--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@ limitations under the License.
   </parent>
 
   <!-- The basics. -->
-  <groupId>org.apache.calcite</groupId>
+  <groupId>com.alibaba.blink.calcite</groupId>
   <artifactId>calcite</artifactId>
   <packaging>pom</packaging>
-  <version>1.17.0</version>
+  <version>1.17.0-SNAPSHOT</version>
 
   <!-- More project information. -->
   <name>Calcite</name>
@@ -47,7 +47,8 @@ limitations under the License.
 
   <properties>
     <surefire.parallel>both</surefire.parallel>
-
+    <!--Used for linq4j-->
+    <calcite.version>1.17.0</calcite.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <top.dir>${project.basedir}</top.dir>
     <version.major>1</version.major>
@@ -162,23 +163,23 @@ limitations under the License.
   </scm>
 
   <modules>
-    <module>babel</module>
-    <module>cassandra</module>
+    <!--<module>babel</module>-->
+    <!--<module>cassandra</module>-->
     <module>core</module>
-    <module>druid</module>
-    <module>elasticsearch</module>
-    <module>example</module>
-    <module>file</module>
-    <module>geode</module>
-    <module>linq4j</module>
-    <module>mongodb</module>
-    <module>pig</module>
-    <module>piglet</module>
-    <module>plus</module>
-    <module>server</module>
-    <module>spark</module>
-    <module>splunk</module>
-    <module>ubenchmark</module>
+    <!--<module>druid</module>-->
+    <!--<module>elasticsearch</module>-->
+    <!--<module>example</module>-->
+    <!--<module>file</module>-->
+    <!--<module>geode</module>-->
+    <!--<module>linq4j</module>-->
+    <!--<module>mongodb</module>-->
+    <!--<module>pig</module>-->
+    <!--<module>piglet</module>-->
+    <!--<module>plus</module>-->
+    <!--<module>server</module>-->
+    <!--<module>spark</module>-->
+    <!--<module>splunk</module>-->
+    <!--<module>ubenchmark</module>-->
   </modules>
 
   <!-- No dependencies here. Declare dependency VERSIONS in
@@ -223,7 +224,7 @@ limitations under the License.
       <dependency>
         <groupId>org.apache.calcite</groupId>
         <artifactId>calcite-linq4j</artifactId>
-        <version>${project.version}</version>
+        <version>${calcite.version}</version>
       </dependency>
 
       <!-- Now third-party dependencies, sorted by groupId and artifactId. -->
@@ -979,14 +980,37 @@ limitations under the License.
   <repositories>
     <repository>
       <id>central</id>
-      <name>Central Repository</name>
-      <url>http://repo.maven.apache.org/maven2</url>
-      <layout>default</layout>
+      <url>http://mvnrepo.alibaba-inc.com/mvn/repository</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>snapshots</id>
+      <url>http://mvnrepo.alibaba-inc.com/mvn/repository</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>releases</name>
+      <url>http://mvnrepo.alibaba-inc.com/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>snapshots</name>
+      <url>http://mvnrepo.alibaba-inc.com/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <profiles>
     <profile>
