--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,14 +18,14 @@ limitations under the License.
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.alibaba.blink.calcite</groupId>
+    <groupId>com.alibaba.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.17.2-SNAPSHOT</version>
+    <version>1.17.0-flink-r1</version>
   </parent>
 
   <artifactId>calcite-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.17.2-SNAPSHOT</version>
+  <version>1.17.0-flink-r1</version>
   <name>Calcite Core</name>
   <description>Core Calcite APIs and engine.</description>
 
