--- a/ubenchmark/pom.xml
+++ b/ubenchmark/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.17.2-SNAPSHOT</version>
+    <version>1.17.0-flink-r1</version>
   </parent>
 
   <properties>
