--- a/geode/pom.xml
+++ b/geode/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
   <parent>
     <groupId>org.apache.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.17.0-flink-r1</version>
+    <version>1.17.0-flink-r2-SNAPSHOT</version>
   </parent>
 
   <artifactId>calcite-geode</artifactId>
   <packaging>jar</packaging>
-  <version>1.17.0-flink-r1</version>
+  <version>1.17.0-flink-r2-SNAPSHOT</version>
   <name>Calcite Geode</name>
   <description>Geode adapter for Calcite</description>
 
