--- a/babel/pom.xml
+++ b/babel/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
   <parent>
     <groupId>org.apache.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.17.0-flink-r2-SNAPSHOT</version>
+    <version>1.17.0-flink-r2</version>
   </parent>
 
   <artifactId>calcite-babel</artifactId>
   <packaging>jar</packaging>
-  <version>1.17.0-flink-r2-SNAPSHOT</version>
+  <version>1.17.0-flink-r2</version>
   <name>Calcite Babel</name>
   <description>Calcite Babel</description>
 
