--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
   <parent>
     <groupId>com.alibaba.calcite</groupId>
     <artifactId>calcite</artifactId>
-    <version>1.17.0-flink-r2-SNAPSHOT</version>
+    <version>1.17.0-flink-r2</version>
   </parent>
 
   <artifactId>calcite-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.17.0-flink-r2-SNAPSHOT</version>
+  <version>1.17.0-flink-r2</version>
   <name>Calcite Core</name>
   <description>Core Calcite APIs and engine.</description>
 
