--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ limitations under the License.
   <groupId>com.alibaba.calcite</groupId>
   <artifactId>calcite</artifactId>
   <packaging>pom</packaging>
-  <version>1.17.0-flink-r2</version>
+  <version>1.17.0-flink-r3-SNAPSHOT</version>
 
   <!-- More project information. -->
   <name>Calcite</name>
